--- a/Dusty/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Dusty/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -288,13 +288,14 @@ CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponen
 Blueprint=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings
-MeshNaniteSettings=
+MeshNaniteSettings=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings
 SkeletalMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens
-K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 BP_ThirdPersonCharacter_C=StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens
 Actor=StaticMeshComponent.Physics.ConstraintsGroup
 Cubo_C=StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup
-BP_CuboBarco_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
+BP_CuboBarco_C=SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
+SpringArmComponent=SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Meshes
@@ -402,7 +403,7 @@ MaterialExpressionCustomOutput="\"Object\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 ARLifeCycleComponent="\"Object\" "
 ApplicationLifecycleComponent="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
@@ -539,7 +540,7 @@ InputTriggerTap="\"Object\" "
 InputTriggerPulse="\"Object\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" "
-StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 AssetViewerSettings="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 K2Node="\"Object\" "
@@ -556,7 +557,10 @@ InteractiveToolPropertySet="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Meshes/SuperBarco_pCube9.SuperBarco_pCube9
+OpenAssetsAtExit=/Game/Meshes/arreglau.arreglau
+OpenAssetsAtExit=/Game/Characters/BP_CuboBarco.BP_CuboBarco
 
 [DetailCategories]
 LandscapeStreamingProxy.Favorites=True
@@ -1606,10 +1610,12 @@ BP_CuboBarco_C.CuboBarco=True
 BP_CuboBarco_C.Networking=True
 BP_CuboBarco_C.TransformCommon=True
 StaticMesh.LevelOfDetail=True
+SpringArmComponent.Physics=True
+SpringArmComponent.Replication=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Meshes/arreglau
-MRUItem1=/Game/Characters/BP_CuboBarco
+MRUItem0=/Game/Characters/BP_CuboBarco
+MRUItem1=/Game/Meshes/arreglau
 MRUItem2=/Game/Meshes/SuperBarco_pCube9
 MRUItem3=/Game/Characters/MyBarco
 MRUItem4=/Game/Characters/Cubo
@@ -3090,7 +3096,7 @@ TextureEditor.TimeStamp=2023.10.17-12.46.14
 TextureEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2023.11.07-12.24.25
 ExternalImagePicker.LastCompileMethod=External
-Dusty.TimeStamp=2024.02.28-13.55.36
+Dusty.TimeStamp=2024.02.28-14.55.53
 Dusty.LastCompileMethod=External
 
 [Python]
