--- a/Dusty/Config/DefaultEngine.ini
+++ b/Dusty/Config/DefaultEngine.ini
@@ -74,3 +74,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.PhysicsSettings]
+DefaultFluidFriction=0.000000
+
